[gd_scene load_steps=69 format=2]

[ext_resource path="res://craftpix-net-753737-free-green-zone-tileset-pixel-art/1 Tiles/painel preto.png" type="Texture" id=1]
[ext_resource path="res://craftpix-net-753737-free-green-zone-tileset-pixel-art/1 Tiles/botaoazul (1).png" type="Texture" id=2]
[ext_resource path="res://Font/dogica.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/painelpreto.gd" type="Script" id=4]
[ext_resource path="res://images/background_inicial.png" type="Texture" id=5]
[ext_resource path="res://Mouse_Cursor.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=5]
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=56]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=23]
default_font = SubResource( 56 )
Button/styles/focus = SubResource( 19 )
Button/styles/hover = SubResource( 20 )
Button/styles/normal = SubResource( 21 )
Button/styles/pressed = SubResource( 22 )

[sub_resource type="DynamicFont" id=24]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=17]
Button/styles/focus = SubResource( 13 )
Button/styles/hover = SubResource( 14 )
Button/styles/normal = SubResource( 15 )
Button/styles/pressed = SubResource( 16 )

[sub_resource type="DynamicFont" id=18]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=29]
Button/styles/focus = SubResource( 25 )
Button/styles/hover = SubResource( 26 )
Button/styles/normal = SubResource( 27 )
Button/styles/pressed = SubResource( 28 )

[sub_resource type="DynamicFont" id=30]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=11]
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 8 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=49]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=50]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=52]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=53]
Button/styles/focus = SubResource( 49 )
Button/styles/hover = SubResource( 50 )
Button/styles/normal = SubResource( 51 )
Button/styles/pressed = SubResource( 52 )

[sub_resource type="DynamicFont" id=54]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=43]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=44]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=45]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=47]
Button/styles/focus = SubResource( 43 )
Button/styles/hover = SubResource( 44 )
Button/styles/normal = SubResource( 45 )
Button/styles/pressed = SubResource( 46 )

[sub_resource type="DynamicFont" id=48]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=35]
Button/styles/focus = SubResource( 31 )
Button/styles/hover = SubResource( 32 )
Button/styles/normal = SubResource( 33 )
Button/styles/pressed = SubResource( 34 )

[sub_resource type="DynamicFont" id=36]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=41]
Button/styles/focus = SubResource( 37 )
Button/styles/hover = SubResource( 38 )
Button/styles/normal = SubResource( 39 )
Button/styles/pressed = SubResource( 40 )

[sub_resource type="DynamicFont" id=42]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=57]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=58]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=59]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=60]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=61]
Button/styles/focus = SubResource( 57 )
Button/styles/hover = SubResource( 58 )
Button/styles/normal = SubResource( 59 )
Button/styles/pressed = SubResource( 60 )

[sub_resource type="DynamicFont" id=62]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=55]
size = 170
font_data = ExtResource( 3 )

[node name="314dd8" type="Node2D"]
script = ExtResource( 4 )

[node name="BackgroundInicial" type="Sprite" parent="."]
position = Vector2( 580, 454 )
scale = Vector2( 1.48643, 2.69748 )
texture = ExtResource( 5 )

[node name="PainelPreto" type="Sprite" parent="."]
position = Vector2( 621, 324 )
scale = Vector2( 0.803887, 0.886896 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Botaoazul(1)" type="Sprite" parent="PainelPreto"]
position = Vector2( -121.908, 214.23 )
scale = Vector2( 0.965362, 0.930798 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Button1" type="Button" parent="PainelPreto/Botaoazul(1)"]
margin_left = -78.6039
margin_top = -60.5677
margin_right = -13.6039
margin_bottom = -7.56775
theme = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 6 )
text = "1"

[node name="Botaoazul(1)2" type="Sprite" parent="PainelPreto"]
position = Vector2( -126.883, 96.9674 )
scale = Vector2( 0.965362, 0.930798 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Button4" type="Button" parent="PainelPreto/Botaoazul(1)2"]
margin_left = -76.0269
margin_top = -55.7224
margin_right = -11.0269
margin_bottom = -2.72241
theme = SubResource( 23 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 24 )
text = "4"

[node name="Botaoazul(1)3" type="Sprite" parent="PainelPreto"]
position = Vector2( -135.591, -16.9129 )
scale = Vector2( 0.965362, 0.930798 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Button7" type="Button" parent="PainelPreto/Botaoazul(1)3"]
margin_left = -77.3154
margin_top = -65.4132
margin_right = -12.3154
margin_bottom = -12.4132
theme = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 18 )
text = "7"

[node name="Botaoazul(1)4" type="Sprite" parent="PainelPreto"]
position = Vector2( 41.0505, 99.2225 )
scale = Vector2( 0.965362, 0.930798 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Button5" type="Button" parent="PainelPreto/Botaoazul(1)4"]
margin_left = -77.3154
margin_top = -60.5678
margin_right = -12.3154
margin_bottom = -7.56781
rect_pivot_offset = Vector2( -924, -108 )
theme = SubResource( 29 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 30 )
text = "5"

[node name="Botaoazul(1)5" type="Sprite" parent="PainelPreto"]
position = Vector2( 44.7824, 219.868 )
scale = Vector2( 0.965362, 0.930798 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Button2" type="Button" parent="PainelPreto/Botaoazul(1)5"]
margin_left = -77.3154
margin_top = -61.7792
margin_right = -12.3154
margin_bottom = -8.77917
theme = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 12 )
text = "2"

[node name="Botaoazul(1)6" type="Sprite" parent="PainelPreto"]
position = Vector2( 32.3429, -16.9129 )
scale = Vector2( 0.965362, 0.930798 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Button8" type="Button" parent="PainelPreto/Botaoazul(1)6"]
margin_left = -77.3154
margin_top = -61.7792
margin_right = -12.3154
margin_bottom = -8.77917
theme = SubResource( 53 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 54 )
text = "8"

[node name="Botaoazul(1)7" type="Sprite" parent="PainelPreto"]
position = Vector2( 197.789, -18.0404 )
scale = Vector2( 0.965362, 0.930798 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Button9" type="Button" parent="PainelPreto/Botaoazul(1)7"]
margin_left = -78.604
margin_top = -59.3564
margin_right = -13.604
margin_bottom = -6.35645
theme = SubResource( 47 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 48 )
text = "9"

[node name="Botaoazul(1)8" type="Sprite" parent="PainelPreto"]
position = Vector2( -1510.16, -126.283 )
scale = Vector2( 0.965362, 0.930798 )
texture = ExtResource( 2 )
offset = Vector2( 1775.68, 250.751 )
__meta__ = {
"_edit_group_": true
}

[node name="Button6" type="Button" parent="PainelPreto/Botaoazul(1)8"]
margin_left = 1703.52
margin_top = 190.183
margin_right = 1768.52
margin_bottom = 243.183
theme = SubResource( 35 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 36 )
text = "6"

[node name="Botaoazul(1)9" type="Sprite" parent="PainelPreto"]
position = Vector2( 207.741, 219.868 )
scale = Vector2( 0.965362, 0.930798 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Button3" type="Button" parent="PainelPreto/Botaoazul(1)9"]
margin_left = -78.604
margin_top = -59.3564
margin_right = -13.604
margin_bottom = -6.35645
theme = SubResource( 41 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 42 )
text = "3"

[node name="Botaoazul(1)0" type="Sprite" parent="PainelPreto"]
position = Vector2( 49.7582, 334.876 )
scale = Vector2( 0.965362, 0.930798 )
texture = ExtResource( 2 )

[node name="Button0" type="Button" parent="PainelPreto/Botaoazul(1)0"]
margin_left = -73.4496
margin_top = -54.511
margin_right = 1.55035
margin_bottom = 0.489014
theme = SubResource( 61 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.380392, 1, 0.988235, 1 )
custom_colors/font_color_pressed = Color( 0.380392, 1, 0.988235, 1 )
custom_fonts/font = SubResource( 62 )
text = "0"

[node name="Label" type="Label" parent="PainelPreto"]
margin_left = -240.083
margin_top = -333.748
margin_right = 156.917
margin_bottom = -143.748
custom_colors/font_color = Color( 0.701961, 0.027451, 0.027451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 55 )
align = 1
valign = 1

[node name="Mouse_Cursor" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="PainelPreto/Botaoazul(1)/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="PainelPreto/Botaoazul(1)2/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="PainelPreto/Botaoazul(1)3/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="PainelPreto/Botaoazul(1)4/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="PainelPreto/Botaoazul(1)5/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="PainelPreto/Botaoazul(1)6/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="PainelPreto/Botaoazul(1)7/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="PainelPreto/Botaoazul(1)8/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="PainelPreto/Botaoazul(1)9/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="PainelPreto/Botaoazul(1)0/Button0" to="." method="_on_Button0_pressed"]
